git-svn-id: https://in-mhnx102w104.majesco.com/svn/migration-project@7 e40a6d2b-a81e-7448-b49d-e417f07a2ae4

--- a/ans-infra/vars.yml
+++ b/ans-infra/vars.yml
@@ -1,7 +1,7 @@
 ---
 vcenter_hostname: 172.17.251.172
 username: administrator@vsphere.local
-password: s#rTdec@2021#
+password: xxxxxxxxxxxxxxx
 folder: testansible
 datastore: NTNX-MHP-Datastore
 vmtemplate: Windows2019-LnA-Template
